# robinhood-tools

./: .gitignore  README.md
docs/plans/: 2026-03-16-robinhood-cli-plan.md
robinhood-cli/: pyproject.toml
robinhood-cli/robinhood_cli/: auth.py  output.py
robinhood-cli/robinhood_cli/commands/: options.py
robinhood-cli/tests/unit/: test_auth.py  test_output.py
robinhood-core/robinhood_core/: client.py
robinhood-core/robinhood_core/services/: __init__.py  fundamentals.py  market_data.py  news.py  options.py  orders.py  portfolio.py  watchlists.py
robinhood-core/tests/unit/: test_robinhood_client.py  test_service_integration.py  test_service_market_data.py  test_service_news.py  test_service_orders.py  test_service_portfolio.py
robinhood-mcp/: LICENSE  README.md  pyproject.toml  requirements.txt
robinhood-mcp/robin_stocks_mcp/: __main__.py  server.py
robinhood-mcp/robin_stocks_mcp/models/: __init__.py  base.py  fundamentals.py  market.py  news.py  options.py  orders.py  portfolio.py  watchlists.py
robinhood-mcp/robin_stocks_mcp/robinhood/: __init__.py  client.py  errors.py
robinhood-mcp/robin_stocks_mcp/services/: fundamentals.py  market_data.py  news.py  options.py  orders.py  portfolio.py  watchlists.py
robinhood-mcp/tests/integration/: test_smoke.py
robinhood-mcp/tests/unit/: test_model_coercion.py  test_models_fundamentals.py  test_models_market.py  test_models_news.py  test_models_options.py  test_models_orders.py  test_models_portfolio.py  test_models_watchlists.py  test_robinhood_client.py  test_server.py  test_service_fundamentals.py  test_service_option_positions.py  test_service_options.py  test_service_watchlists.py
