[project]
name = "robinhood-cli"
version = "0.1.0"
description = "CLI tool for Robinhood via robin-stocks"
requires-python = ">=3.11"
dependencies = [
    "robinhood-core",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
rh = "robinhood_cli.main:app"

[tool.uv.sources]
robinhood-core = { path = "../robinhood-core", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
