[project]
name = "robinhood-mcp"
version = "0.1.0"
description = "Read-only MCP server for the Robinhood API via robin-stocks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ach968"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "robinhood-core",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
]

[tool.uv.sources]
robinhood-core = { path = "../robinhood-core", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ach968/robinhood-mcp"
Repository = "https://github.com/ach968/robinhood-mcp"
Issues = "https://github.com/ach968/robinhood-mcp/issues"

[project.scripts]
robinhood-mcp = "robin_stocks_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
